[workspace]
resolver = "2"
members = [
    "forc",
    "forc-pkg",
    "forc-plugins/*",
    "forc-test",
    "forc-tracing",
    "forc-util",
    "scripts/mdbook-forc-documenter",
    "sway-ast",
    "sway-core",
    "sway-error",
    "sway-features",
    "sway-ir",
    "sway-ir/sway-ir-macros",
    "sway-lsp",
    "sway-parse",
    "sway-types",
    "sway-utils",
    "swayfmt",
    "test",
]
exclude = ["examples/*", "swayfmt/test_macros", "forc-test/test_data"]

[workspace.package]
edition = "2021"
version = "0.70.2"
authors = ["Fuel Labs <contact@fuel.sh>"]
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/sway"

[workspace.lints.rust]
mismatched_lifetime_syntaxes = "allow"

[workspace.lints.clippy]
iter_over_hash_type = "deny"

[workspace.dependencies]
#
# Internal dependencies in order to propagate `workspace.version`
#

forc = { path = "forc/", version = "0.70.2" }
forc-pkg = { path = "forc-pkg/", version = "0.70.2" }
forc-test = { path = "forc-test/", version = "0.70.2" }
forc-tracing = { path = "forc-tracing/", version = "0.70.2" }
forc-util = { path = "forc-util/", version = "0.70.2" }

# Forc plugins
forc-plugins = { path = "forc-plugins/", version = "0.70.2" }
forc-client = { path = "forc-plugins/forc-client/", version = "0.70.2" }
forc-crypto = { path = "forc-plugins/forc-crypto/", version = "0.70.2" }
forc-debug = { path = "forc-plugins/forc-debug/", version = "0.70.2" }
forc-doc = { path = "forc-plugins/forc-doc/", version = "0.70.2" }
forc-fmt = { path = "forc-plugins/forc-fmt/", version = "0.70.2" }
forc-lsp = { path = "forc-plugins/forc-lsp/", version = "0.70.2" }
forc-mcp = { path = "forc-plugins/forc-mcp/", version = "0.70.2" }
forc-migrate = { path = "forc-plugins/forc-migrate/", version = "0.70.2" }
forc-publish = { path = "forc-plugins/forc-publish/", version = "0.70.2" }
forc-tx = { path = "forc-plugins/forc-tx/", version = "0.70.2" }

sway-ast = { path = "sway-ast/", version = "0.70.2" }
sway-core = { path = "sway-core/", version = "0.70.2" }
sway-error = { path = "sway-error/", version = "0.70.2" }
sway-features = { path = "sway-features/", version = "0.70.2" }
sway-lsp = { path = "sway-lsp/", version = "0.70.2" }
sway-parse = { path = "sway-parse/", version = "0.70.2" }
sway-types = { path = "sway-types/", version = "0.70.2" }
sway-utils = { path = "sway-utils/", version = "0.70.2" }
swayfmt = { path = "swayfmt/", version = "0.70.2" }

# Sway IR
sway-ir = { path = "sway-ir/", version = "0.70.2" }
sway-ir-macros = { path = "sway-ir/sway-ir-macros", version = "0.70.2" }

#
# External Fuel dependencies
#

# Dependencies from the `fuel-abi-types` repository:
fuel-abi-types = "0.15"

# Dependencies from the `fuel-core` repository:
#
# Although ALL versions are "X.Y", we need the complete semver for
# fuel-core-client as the GitHub Actions workflow parses this value to pull down
# the correct tarball.
fuel-core = { version = "0.47", default-features = false }
fuel-core-chain-config = { version = "0.47", default-features = false }
fuel-core-client = { version = "0.47.1", default-features = false }
fuel-core-storage = { version = "0.47", default-features = false }
fuel-core-types = { version = "0.47", default-features = false }

# Dependencies from the `fuels-rs` repository:

fuels = "0.76"
fuels-core = "0.76"
fuels-accounts = "0.76"

# Dependencies from the `fuel-vm` repository:
fuel-asm = "0.65"
fuel-crypto = "0.65"
fuel-types = "0.65"
fuel-tx = "0.65"
fuel-vm = "0.65"

# Dependencies from the `forc-wallet` repository:
forc-wallet = "0.15"

#
# External dependencies
#

annotate-snippets = "0.10"
ansiterm = "0.12"
anyhow = "1.0"
assert-json-diff = "2.0"
assert_matches = "1.5"
async-trait = "0.1"
aws-config = "1.5"
aws-sdk-kms = "1.44"
axum = "0.8"
byte-unit = "5.1"
bytes = "1.7"
chrono = { version = "0.4", default-features = false }
cid = "0.11"
clap = "4.5"
clap_complete = "4.5"
clap_complete_fig = "4.5"
codspeed-criterion-compat = "2.6"
colored = "2.0"
completest-pty = "0.5"
comrak = "0.28"
criterion = "0.5"
crossbeam-channel = "0.5"
dap = "0.4.1-alpha"
dashmap = "6.1"
devault = "0.2"
dialoguer = "0.11"
dir_indexer = "0.0"
dirs = "5.0"
downcast-rs = "1.2"
duct = "0.13"
duplicate = "2.0"
either = "1.9"
escargot = "0.5"
ethabi = { package = "fuel-ethabi", version = "18.0" }
etk-asm = { package = "fuel-etk-asm", version = "0.3.1-dev" }
etk-ops = { package = "fuel-etk-ops", version = "0.3.1-dev" }
expect-test = "1.4"
extension-trait = "1.0"
fd-lock = "4.0"
filecheck = "0.5"
flate2 = "1.0"
fs_extra = "1.2"
futures = { version = "0.3", default-features = false }
futures-util = "0.3"
gag = "1.0"
gimli = "0.31"
git2 = "0.19"
gix-url = "0.27"
glob = "0.3"
graph-cycles = "0.1"
hashbrown = "0.14"
hex = "0.4"
horrorshow = "0.8"
im = "15.0"
in_definite = "1.0"
include_dir = "0.7"
indexmap = "2.5"
indoc = "2.0"
insta = "1.40"
ipfs-api-backend-hyper = "0.6"
itertools = "0.13"
k256 = "0.13"
lazy_static = "1.4"
libc = "0.2"
libp2p-identity = "0.2"
libtest-mimic = "0.7"
lsp-types = "0.94"
mark-flaky-tests = "1.0"
mdbook = { version = "0.4", default-features = false }
minifier = "0.3"
normalize-path = "0.2"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
object = "0.36"
once_cell = "1.18"
opener = "0.7"
parking_lot = "0.12"
paste = "1.0"
peg = "0.8"
pest = "2.7"
pest_derive = "2.7"
petgraph = "0.6"
phf = "0.11"
portpicker = "0.1"
pretty_assertions = "1.4"
prettydiff = "0.7"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
rayon = "1.7"
rayon-cond = "0.3"
regex = "1.10"
reqwest = "0.12"
rexpect = "0.6"
revm = "14.0"
rmcp = "0.2"
ropey = "1.5"
rpassword = "7.2"
rustc-hash = "1.1"
rustyline = "15.0"
scopeguard = "1.2"
semver = "1.0"
serde = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
serde_with = "3.3"
serde_yaml = "0.9"
serial_test = "3.0"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
similar = "2.0"
slotmap = "1.0"
smallvec = "1.7"
strsim = "0.11"
strum = "0.26"
syn = "2.0"
sysinfo = "0.29"
tai64 = "4.0"
taplo = "0.13"
tar = "0.4"
tempfile = "3"
term-table = "1.3"
termion = "4.0"
textwrap = "0.16"
thiserror = "1.0"
tikv-jemallocator = "0.6"
tokio = "1.12"
toml = "0.8"
toml_edit = { version = "0.22", features = ["serde"] }
tower = { version = "0.5", default-features = false }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
uint = "0.9"
unicode-bidi = "0.3"
unicode-xid = "0.2"
url = "2.2"
urlencoding = "2.1"
uuid = "1.13"
vec1 = "1.8"
vte = "0.13"
walkdir = "2.3"
whoami = "1.5"
wiremock = "0.6"
