[package]
name = "core-types"
description = "Sway core types."
version = "0.1.0"
authors = ["Victor Lopez <victor.lopez@fuel.sh>"]
edition = "2018"
repository = "https://github.com/FuelLabs/sway"

[dependencies]
serde = {version="1.0", features=["derive"]}
fuel-asm = {git="ssh://git@github.com/FuelLabs/fuel-asm.git"}
fuel-tx = {git="ssh://git@github.com/FuelLabs/fuel-tx.git"}
