[package]
name = "core-types"
description = "Sway core types."
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"
repository = "https://github.com/FuelLabs/sway"

[dependencies]
fuel-asm = { git = "ssh://git@github.com/FuelLabs/fuel-asm.git" }
fuel-tx = { git = "ssh://git@github.com/FuelLabs/fuel-tx.git" }
serde = { version = "1.0", features = ["derive"] }
