[package]
name = "core-types"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/sway"
description = "Sway core types."

[dependencies]
fuel-asm = { git = "ssh://git@github.com/FuelLabs/fuel-asm.git" }
fuel-tx = { git = "ssh://git@github.com/FuelLabs/fuel-tx.git" }
serde = { version = "1.0", features = ["derive"] }
