[package]
name = "forc-diagnostic"
version.workspace = true
description = "Diagnostic and tracing utilities shared between forc crates."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
annotate-snippets.workspace = true
ansiterm.workspace = true
regex.workspace = true
sway-error.workspace = true
sway-types.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }

[dev-dependencies]
tracing-test.workspace = true

[lints]
workspace = true
