[package]
name = "forc-pkg"
version = "0.48.0"
description = "Building, locking, fetching and updating Sway projects as Forc packages."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ansi_term = "0.12"
anyhow = "1"
cid = "0.10"
forc-tracing = { version = "0.48.0", path = "../forc-tracing" }
forc-util = { version = "0.48.0", path = "../forc-util" }
fuel-abi-types = "0.1"
futures = "0.3"
git2 = { version = "0.17.2", features = [
    "vendored-libgit2",
    "vendored-openssl",
] }
gix-url = { version = "0.16.0", features = ["serde1"] }
hex = "0.4.3"
ipfs-api-backend-hyper = { version = "0.6", features = ["with-builder"] }
petgraph = { version = "0.6", features = ["serde-1"] }
reqwest = "0.11.7"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_ignored = "0.1.9"
serde_json = "1.0"
serde_with = "3.3.0"
sway-core = { version = "0.48.0", path = "../sway-core" }
sway-error = { version = "0.48.0", path = "../sway-error" }
sway-types = { version = "0.48.0", path = "../sway-types" }
sway-utils = { version = "0.48.0", path = "../sway-utils" }
tar = "0.4.38"
toml = { version = "0.7", features = ["parse"] }
tracing = "0.1"
url = { version = "2.2", features = ["serde"] }
vec1 = "1.8.0"
walkdir = "2"

[dev-dependencies]
regex = "^1.10.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sysinfo = "0.29.0"
