[package]
name = "forc-pkg"
version.workspace = true
description = "Building, locking, fetching and updating Sway projects as Forc packages."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[target.'cfg(not(target_os = "macos"))'.dependencies]
sysinfo.workspace = true

[dependencies]
ansiterm.workspace = true
anyhow.workspace = true
byte-unit.workspace = true
cid.workspace = true
flate2.workspace = true
forc-tracing.workspace = true
forc-util = { workspace = true }
fuel-abi-types.workspace = true
futures.workspace = true
git2 = { workspace = true, features = ["vendored-libgit2", "vendored-openssl"] }
gix-url = { workspace = true, features = ["serde"] }
hex.workspace = true
ipfs-api-backend-hyper = { workspace = true, features = ["with-builder", "with-send-sync"] }
once_cell.workspace = true
petgraph = { workspace = true, features = ["serde-1"] }
reqwest.workspace = true
scopeguard.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_ignored.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sway-core.workspace = true
sway-ir.workspace = true
sway-error.workspace = true
sway-features.workspace = true
sway-types.workspace = true
sway-utils.workspace = true
tar.workspace = true
tokio.workspace = true
toml = { workspace = true, features = ["parse"] }
toml_edit.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
vec1.workspace = true
walkdir.workspace = true

[dev-dependencies]
regex.workspace = true
tempfile.workspace = true

[lints]
workspace = true

