[package]
name = "forc-test"
version = "0.55.0"
description = "A library for building and running Sway unit tests within Forc packages."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
forc-pkg = { version = "0.55.0", path = "../forc-pkg" }
fuel-abi-types = { workspace = true }
fuel-tx = { workspace = true, features = ["test-helpers"] }
fuel-vm = { workspace = true, features = ["random", "test-helpers"] }
rand = "0.8"
rayon = "1.7.0"
sway-core = { version = "0.55.0", path = "../sway-core" }
sway-types = { version = "0.55.0", path = "../sway-types" }
