[package]
name = "forc-test"
version.workspace = true
description = "A library for building and running Sway unit tests within Forc packages."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
forc-pkg.workspace = true
forc-util = { workspace = true, features = ["tx"] }
fuel-abi-types.workspace = true
fuel-tx = { workspace = true, features = ["test-helpers"] }
fuel-vm = { workspace = true, features = ["random", "test-helpers"] }
rand.workspace = true
rayon.workspace = true
serde_json.workspace = true
sway-core.workspace = true
sway-features.workspace = true
sway-types.workspace = true

[lints]
workspace = true
