[package]
name = "forc-tracing"
version.workspace = true
description = "Tracing utility shared between forc crates."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
telemetry = []

[dependencies]
ansiterm.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }
fuel-telemetry.workspace = true

[dev-dependencies]
tracing-test.workspace = true
