[package]
name = "forc-tracing"
version.workspace = true
description = "Tracing utility shared between forc crates."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ansiterm.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }

[dev-dependencies]
tracing-test.workspace = true

[lints]
workspace = true
