[package]
name = "forc-util"
version.workspace = true
description = "Utility items shared between forc crates."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
annotate-snippets.workspace = true
ansi_term.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["cargo", "derive", "env"] }
dirs.workspace = true
fd-lock.workspace = true
forc-tracing.workspace = true
fuel-tx = { workspace = true, features = ["serde"], optional = true }
hex.workspace = true
paste.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serial_test.workspace = true
sway-core.workspace = true
sway-error.workspace = true
sway-types.workspace = true
sway-utils.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "json",
] }
unicode-xid.workspace = true

[features]
default = ["fuel-tx"]
