[package]
name = "forc-util"
version.workspace = true
description = "Utility items shared between forc crates."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
tx = ["dep:fuel-tx", "dep:fuel-abi-types", "dep:fuels-core", "dep:sway-core", "dep:clap"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
dirs.workspace = true
fuel-abi-types = { workspace = true, optional = true }
fuel-tx = { workspace = true, optional = true }
fuels-core = { workspace = true, optional = true }
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sway-core = { workspace = true, optional = true }
sway-utils.workspace = true

[dev-dependencies]
mark-flaky-tests.workspace = true

[lints]
workspace = true
