[package]
name = "forc"
version = "0.48.0"
description = "Fuel Orchestrator."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "forc"
path = "src/lib.rs"

[[bin]]
name = "forc"
path = "src/main.rs"

[dependencies]
annotate-snippets = { version = "0.9", features = ["color"] }
ansi_term = "0.12"
anyhow = "1.0.41"
clap = { version = "3.1", features = ["cargo", "derive", "env"] }
clap_complete = "3.1"
forc-pkg = { version = "0.48.0", path = "../forc-pkg" }
forc-test = { version = "0.48.0", path = "../forc-test" }
forc-tracing = { version = "0.48.0", path = "../forc-tracing" }
forc-util = { version = "0.48.0", path = "../forc-util" }
fs_extra = "1.2"
fuel-asm = { workspace = true }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
sway-core = { version = "0.48.0", path = "../sway-core" }
sway-error = { version = "0.48.0", path = "../sway-error" }
sway-types = { version = "0.48.0", path = "../sway-types" }
sway-utils = { version = "0.48.0", path = "../sway-utils" }
term-table = "1.3"
tokio = { version = "1.8.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.7", features = ["parse"] }
toml_edit = "0.19"
tracing = "0.1"
url = "2.2"
uwuify = { version = "^0.2", optional = true }
walkdir = "2.3"
whoami = "1.1"

[features]
default = []
test = []
util = []
uwu = ["uwuify"]
